--- a/src/ToDoList/Views/Items/Create.cshtml
+++ b/src/ToDoList/Views/Items/Create.cshtml
@@ -1,24 +1,21 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@model ToDoList.Models.Item
+﻿@model ToDoList.Models.Item
 
-<html>
-<head>
-    <title>To Do List - Create</title>
-</head>
-<body>
-    <h2>Create</h2>
-    <hr />
-    <h4>Add a new task</h4>
-    @using (Html.BeginForm())
-    {
-        @Html.LabelFor(model => model.Description)
-        @Html.TextBoxFor(model => model.Description)
-        <input type="submit" value="Add new task" />
-    }
-    <p>@Html.ActionLink("Back to list", "Index")</p>
-</body>
-</html>
+@{
+    ViewData["Title"] = "Item - Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<h2>Create a new item</h2>
+<hr />
+
+@using (Html.BeginForm())
+{
+    @Html.LabelFor(model => model.Description)
+    @Html.EditorFor(model => model.Description)
+
+    @Html.LabelFor(model => model.CategoryId)
+    @Html.DropDownList("CategoryId")
+
+    <input type="submit" value="Create" class="btn btn-default" />
+}
+
+@Html.ActionLink("Back to List", "Index")
