--- a/src/ToDoList/Views/Items/Delete.cshtml
+++ b/src/ToDoList/Views/Items/Delete.cshtml
@@ -1,24 +1,15 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model ToDoList.Models.Item
+
 @{
+    ViewData["Title"] = "Item - Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@model ToDoList.Models.Item
-
-<html>
-<head>
-    <title>To Do List - Delete</title>
-</head>
-<body>
-
-    <h2>Are you sure you want to delete this?</h2>
-    <hr />
-    @Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)
-    @using (Html.BeginForm())
-    {
-        <input type="submit" value="Delete" />
-    }
-    @Html.ActionLink("Back to List", "Index")
-</body>
-</html>
+<h2>Are you sure you want to delete this?</h2>
+<hr />
+@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)
+@using (Html.BeginForm())
+{
+    <input type="submit" value="Delete" />
+}
+<p>@Html.ActionLink("Back to list", "Index")</p>
