--- a/src/ToDoList/Views/Items/Details.cshtml
+++ b/src/ToDoList/Views/Items/Details.cshtml
@@ -1,18 +1,21 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@model ToDoList.Models.Item
+﻿@model ToDoList.Models.Item
 
-<html>
-<head>
-    <title>To Do List - Details</title>
-</head>
-<body>
-    <h2>Details</h2>
-    <hr />
-    @Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)
-    <p>@Html.ActionLink("Back to list", "Index")</p>
-</body>
-</html>
+@{
+    ViewData["Title"] = "Item - Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<h2>Item Details</h2>
+<hr />
+
+<p>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</p>
+<p>@Html.DisplayNameFor(model => model.CategoryId) : @Html.DisplayFor(model => model.CategoryId)</p>
+@if(Model.Done == true)
+{
+    <p>Task is Completed</p>
+}
+else
+{
+    <p>Task is not Completed</p>
+}
+
+<p>@Html.ActionLink("Edit", "Edit", new { id = Model.ItemId }) | @Html.ActionLink("Back to List", "Index")</p>
