--- a/src/ToDoList/Views/Items/Edit.cshtml
+++ b/src/ToDoList/Views/Items/Edit.cshtml
@@ -1,30 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model ToDoList.Models.Item
+
 @{
+    ViewData["Title"] = "Item - Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2>Edit</h2>
+<hr />
+<h4>Edit this item: @Html.DisplayFor(model => model.Description)</h4>
+@using (Html.BeginForm())
+{
+    @Html.HiddenFor(model => model.ItemId)
 
-@model ToDoList.Models.Item
+    @Html.LabelFor(model => model.Description)
+    @Html.EditorFor(model => model.Description)
 
-<html>
-<head>
-    <title>To Do List - Edit</title>
-</head>
-<body>
-    <h2>Edit</h2>
-    <hr />
-    <h4>Edit this task: @Html.DisplayFor(model => model.Description)</h4>
+    @Html.LabelFor(model => model.CategoryId)
+    @Html.DropDownList("CategoryId")
 
-    @using (Html.BeginForm())
-    {
-        @Html.HiddenFor(model => model.ItemId)
-
-        @Html.LabelFor(model => model.Description)
-        @Html.EditorFor(model => model.Description)
-
-        <input type="submit" value="Save" />
-    }
-    <p>@Html.ActionLink("Back to list", "Index")</p>
-
-</body>
-</html>
+    <input type="submit" value="Save" class="btn btn-default" />
+}
+@Html.ActionLink("Back to List", "Index")
