--- a/src/ToDoList/Views/Items/Index.cshtml
+++ b/src/ToDoList/Views/Items/Index.cshtml
@@ -1,24 +1,54 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@model IEnumerable<ToDoList.Models.Item>
+﻿@model IEnumerable<ToDoList.Models.Item>
 
-<html>
-<head>
-    <title>To Do List</title>
-</head>
-<body>
-    <h2>To Do List</h2>
-    <hr />
-    <h4>@Html.DisplayNameFor(model => model.Description)</h4>
-    <ul>
-        @foreach (var listItem in Model)
-        {
-            <li>@Html.DisplayFor(modelItem => listItem.Description) | @Html.ActionLink("Details", "Details", new { id = listItem.ItemId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.ItemId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.ItemId })</li>
-        }
-    </ul>
-    <p>@Html.ActionLink("Add new item", "Create")</p>
-</body>
-</html>
+@{
+    ViewData["Title"] = "Item";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<h2>To Do List</h2>
+<hr />
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Done)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Description)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Category.Name)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var listItem in Model)
+    {
+        <tr>
+            <td class="check-box">
+                @if(listItem.Done)
+                {
+                    @Html.ActionLink("\u2611", "Check", new { id = listItem.ItemId })
+                }
+                else
+                {
+                    @Html.ActionLink("\u2610", "Check", new { id = listItem.ItemId })
+
+                }
+
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => listItem.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => listItem.Category.Name)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = listItem.ItemId }) |
+                @Html.ActionLink("Details", "Details", new { id = listItem.ItemId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = listItem.ItemId })
+            </td>
+        </tr>
+    }
+</table>
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
